overflow fixes

--- a/src/app/bounceable/bounceable.component.scss
+++ b/src/app/bounceable/bounceable.component.scss
@@ -1,7 +1,6 @@
 as-bounceable {
     display: inline-block;
     cursor: pointer;
-    overflow-y: auto;
     position: fixed;
 
     * {
